--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
 .App {
-  text-align: center;
+  margin: 50px 150px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.userCard {
+  width: 100%;
+  background-color: darkgray;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.users {
+  margin-top: 50px;
+  display: grid;
+  place-content: center;
+  grid-template-columns: repeat(3, 350px);
+  /*grid-auto-columns: repeat(3, 350px);*/
+  gap: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+  margin: 0;
 }
